[project]
name = "asmysql"
version = "1.3.2"
description = "An Asynchronous MySQL Client Engine Using Aiomysql."
authors = [{ name = "vastxiao", email = "vastxiao@gmail.com" }]
maintainers = [{ name = "vastxiao", email = "vastxiao@gmail.com" }]
keywords = ["async", "asyncio", "mysql", "aiomysql"]
classifiers = [
    #    "Programming Language :: Python :: 3",
    #    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: POSIX :: Linux",
    #    "License :: OSI Approved :: MIT License",
]

urls.Home = "https://pypi.org/project/asmysql/"
urls.Repository = "https://github.com/Vastxiao/asmysql"
urls.Documentation = "https://github.com/Vastxiao/asmysql/blob/main/README.md"
urls."Readme-zh" = "https://github.com/Vastxiao/asmysql/blob/main/README_zh.md"
urls."Changelog-zh" = "https://github.com/Vastxiao/asmysql/blob/main/CHANGELOG_zh.md"
urls."Changelog" = "https://github.com/Vastxiao/asmysql/blob/main/CHANGELOG.md"
urls."Vastxiao Blog" = "https://vastxiao.github.io/"
urls."Gitee Repo" = "https://gitee.com/vastxiao/asmysql"


license = { text = "MIT" }
readme = "README.md"

requires-python = ">=3.9"

dependencies = [
    "aiomysql>=0.2.0",
    "cryptography>=45.0.7",
    "dbutils>=3.1.2",
]

[dependency-groups]
dev = ["ruff>=0.12.3", "pytest", "ipython", "pydantic>=2.4.0"]
test = ["sqlmodel>=0.0.24"]


[tool.ruff] # 复用之前的 Ruff 配置（uv lint 会读取）
select = ["E", "F", "I"] # PEP8 错误、语法错误、导入排序
fix = true
line-length = 120        # 每行最大长度

[tool.uv]
default-groups = ["dev"]

[[tool.uv.index]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
[[tool.uv.index]]
name = "tx"
url = "https://mirrors.tencent.com/pypi/simple/"
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"

[build-system]
requires = ["uv_build>=0.7.20,<0.8.0"]
build-backend = "uv_build"
[tool.uv.build-backend]
module-root = ""
source-include = ["CHANGELOG.md", "CHANGELOG_zh.md", "README_zh.md"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
